Added additional visualisation with less info for screen recording

--- a/transport_simulation_carbon.html
+++ b/transport_simulation_carbon.html
@@ -7,16 +7,10 @@
 	<link rel="stylesheet" type="text/css" href="timeuse/fonts.css" />
 </head>
 
-<style>
-	.node {
-		stroke-width: 1.5px;
-	}
-</style>
-
 <body>
 	<div id="main-wrapper">
-		<div id="sidebar">
-
+		<div id="sidebar">s
+			<div id="current_time">4:00am</div>
 			<div id="speed">
 				<div class="togglebutton slow current" data-val="slow">Slow</div>
 				<div class="togglebutton medium" data-val="medium">Medium</div>
@@ -26,7 +20,6 @@
 			<div id="mode"></div>
 			<div id="carbon"></div>
 		</div>
-		<div id="current_time">4:00am</div>
 		<div id="chart"></div>
 		<div class="clr"></div>
 	</div>
